@@ -12336,7 +12336,7 @@ begin
             //if not (section.GetSectionLines (s2, TXStringList(localSection), startlineofsection, true, true, false)
             //  or GetSectionLines (s2, TXStringList(localSection), startlineofsection, true, true, false))
             if not SearchForSectionLines(self, TWorkSection(section),
-              nil, s2, TXStringList(localSection), startlineofsection, True, True, False)
+              localSection.ParentSection, s2, TXStringList(localSection), startlineofsection, True, True, False)
             then
               InfoSyntaxError := 'Section "' + s2 + '" not found'
             else
@@ -12407,7 +12407,7 @@ begin
             //if not (section.GetSectionLines (s2, TXStringList(localSection), startlineofsection, true, true, true)
             //  or GetSectionLines (s2, TXStringList(localSection), startlineofsection, true, true, true))
             if not SearchForSectionLines(self, TWorkSection(section),
-              nil, s2, TXStringList(localSection), startlineofsection, True, True, False)
+              localSection.ParentSection, s2, TXStringList(localSection), startlineofsection, True, True, False)
             then
               InfoSyntaxError := 'Section "' + s2 + '" not found'
             else
